# AtomVisualizer

./: CMakeLists.txt  main.c
local/shaders/: default_frag.glsl  default_vertex.glsl
